openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: geotrack-api
  namespace: geotrack
  labels:
    app.kubernetes.io/name: geotrack-api
    app.kubernetes.io/part-of: geotrack
  annotations:
    haproxy.router.openshift.io/timeout: 60s
spec:
  to:
    kind: Service
    name: geotrack-api
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
